# There-And-Back-Again

./: .gitignore  README.md  build_and_publish.sh  package.json
data/: 2018-census-main-means-of-travel-to-education-by-statistical.csv  2018-census-main-means-of-travel-to-education-by-statistical.txt  2018-census-main-means-of-travel-to-work-by-statistical-area.txt  statistical-area-2-2018-centroid-true.dbf  statistical-area-2-2018-centroid-true.shp  statistical-area-2-2018-centroid-true.shx  statistical-area-2-2018-centroid-true.txt  statistical-area-2-2018-clipped-generalised.txt
data_schema/: there_and_back_again.proto  update.sh
data_tools/: AreaQueryJSON.cpp  AreaQueryJSON.h  Bounds.h  CMakeLists.txt  GeoJSON.cpp  GeoJSON.h  PolySimplifier.cpp  PolySimplifier.h  Position.h  SHPFile.cpp  SHPFile.h  StatisticalArea.h  main.cpp
public/: index.html
public/data/: README.md
public/data/statistical_area/: README.md
src/: App.css  App.js  TransitLayer.js  schema.json
